--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -3,6 +3,8 @@ F7F6DC  -off white
 FFC090  -salmon pink
 B1D7B4  -pale green
 7FB77E  -med green
+
+ffbfdc  -icon pink
 */
 
 body {
@@ -10,36 +12,160 @@ body {
     padding:0;
     text-align: center;
     font-family: Trebuchet MS, sans-serif;
+    background-color: #7FB77E;
+    font-size: 1.2rem;
 }
 
 h1 {
-    margin-top: 10;
+    margin: 100px auto 0 auto;;
     font-family: 'Righteous';
-    color: #FFC090;
-    font-size: 150px;
+    color: #F7F6DC;
+    font-size: 8rem;
 }
+h2 {
+    color: #7FB77E;
+    font-size: 2.5rem
+}
+
+h3 {
+    color: #FFC090;
+    font-size: 2rem;
+    padding: 20px;
+}
+
+
+hr {
+    border-color: #B1D7B4;
+    border-width: 3px;
+    border-style: dashed solid;
+    width: 60%;
+    height: 0px;
+    }
+p {
+padding: 0px 100px 10px 100px}
 /* */
 .front-text {
     font-family: 'Righteous';
-    color: #7FB77E;
-    font-size: 80px;
+    color: #FFC090;
+    font-size: 3.5rem;
+    margin: 0 auto 250px auto;
 }
 
 .down-arrow{
-    position: relative;
+    position: absolute;
     opacity: 0.3;
-    left: 500px;
+    top: 50px;
     height: 100px;
+    right: 20px;
+    top: 750px;
+}
+.image-container{
+    padding-left: 60px;
+    display: flex;
+}
+.front-img1 {
+    opacity: 0.5;
+    height: 150px;
+    position: relative;
+    padding: 0px 30px 0px 30px;
+}
+
+.front-img2 {
+    opacity: 0.4;
+    height: 100px;
+    position: relative;
+    top: 25px;
+    padding: 0px 20px 0px 30px;
+}
+
+.front-img3 {
+    opacity: 0.5;
+    height: 100px;
+    position:relative;
+    top: 25px;
+    padding: 0px 0px 0px 30px;
 }
 
 .profile {
+    margin: 10px auto 10px auto;
     border-radius: 10%;
+    padding-bottom: 40px;
+    position: relative;
+    top: 40px;
 }
 
 .top-container {
-    background-color: #F7F6DC;
+    background-color: #7FB77E;
     position: relative;
     padding-top: 100px;
-    
+    padding-bottom: 0px;
+
     }
+
+.skill-row {
+    width: 50%;
+    margin: 30px auto 30px auto;
+    text-align: left;
+}
+
+.team-image {
+    width: 25%;
+    opacity: 0.8;
+    float: right;
+    padding: 30px;
+    position: relative;
+    bottom: 50px;
+    }
+.computer-image {
+    width: 23%;
+    opacity: 0.75;
+    float: left;
+    padding: 40px;
+    position: relative;
+}
+
+.middle-container {
+    background-color: #F7F6DC;
+    padding-bottom: 0px;
+}
+
+.bottom-container {
+    background-color: #B1D7B4;
+    padding: 20px 0px 20px 0px;
+}
+
+.footer-link {
+    color: #7FB77E;
+}
+
+.btn {
+  background: #FFC090;
+  background-image: -webkit-linear-gradient(top, #FFC090, #FFC090);
+  background-image: -moz-linear-gradient(top, #FFC090, #FFC090);
+  background-image: -ms-linear-gradient(top, #FFC090, #FFC090);
+  background-image: -o-linear-gradient(top, #FFC090, #FFC090);
+  background-image: linear-gradient(to bottom, #FFC090, #FFC090);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #B1D7B4;
+  background-image: -webkit-linear-gradient(top, #B1D7B4, #B1D7B4);
+  background-image: -moz-linear-gradient(top, #B1D7B4, #B1D7B4);
+  background-image: -ms-linear-gradient(top, #B1D7B4, #B1D7B4);
+  background-image: -o-linear-gradient(top, #B1D7B4, #B1D7B4);
+  background-image: linear-gradient(to bottom, #B1D7B4, #B1D7B4);
+  text-decoration: none;
+}
+
+.name-tag {
+    color: white;
+}
 
